fixup: ui ux improvements, validation improvements, toaster width on narrow devices fixes

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -64,7 +64,7 @@ html[data-theme='zinc'][data-mode='light'] {
     --primary-container: #2a4435;
     --secondary-fixed: #f2dcd3;
     --tertiary: #79564b;
-    --tertiary-fixed: #3d7752;
+    --tertiary-fixed: #a97a68;
     --outline-variant: #b9b3a6;
 }
 
